--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "cosmjs-types",
+  "name": "titan-cosmjs-types",
   "version": "0.9.0",
   "description": "JS and TS types relating to Protocol Buffers used by Cosmos SDK and other related projects",
   "contributors": [
     "Simon Warta <webmaster128@users.noreply.github.com>",
     "Will Clark <willclarktech@users.noreply.github.com>",
-    "Dan Lynch <pyramation@gmail.com>"
+    "Dan Lynch <pyramation@gmail.com>",
+    "Hung Doan <hugjobk@gmail.com>"
   ],
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/confio/cosmjs-types"
+    "url": "https://github.com/tokenize-titan/titan-cosmjs-types"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "files": [
     "cosmos/",
@@ -23,6 +25,7 @@
     "google/",
     "ibc/",
     "tendermint/",
+    "titan/",
     "/binary.*",
     "/helpers.*",
     "/utf8.*",
